--- a/css/tw-output.css
+++ b/css/tw-output.css
@@ -661,12 +661,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 40px;
 }
 
-.mt-4 {
-  margin-top: 40px;
-}
-
 .mb-5 {
   margin-bottom: 50px;
+}
+
+.mt-4 {
+  margin-top: 40px;
 }
 
 .mt-7 {
@@ -896,6 +896,16 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .translate-y-\[-50\%\] {
   --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-\[-25px\] {
+  --tw-translate-x: -25px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-\[-25px\] {
+  --tw-translate-y: -25px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1660,6 +1670,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   .md\:py-8 {
     padding-top: 80px;
     padding-bottom: 80px;
+  }
+
+  .md\:px-6 {
+    padding-left: 60px;
+    padding-right: 60px;
   }
 
   .md\:pt-\[125px\] {
