--- a/css/tw-output.css
+++ b/css/tw-output.css
@@ -751,6 +751,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 1px;
 }
 
+.h-\[300px\] {
+  height: 300px;
+}
+
 .max-h-\[250px\] {
   max-height: 250px;
 }
@@ -829,6 +833,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 33.333333%;
 }
 
+.w-\[300px\] {
+  width: 300px;
+}
+
 .min-w-full {
   min-width: 100%;
 }
@@ -889,16 +897,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   transform-origin: center;
 }
 
-.translate-x-\[-50\%\] {
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-\[-50\%\] {
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .translate-x-\[-25px\] {
   --tw-translate-x: -25px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -906,6 +904,16 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .translate-y-\[-25px\] {
   --tw-translate-y: -25px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-\[-50\%\] {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-\[-50\%\] {
+  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1224,19 +1232,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 25px;
 }
 
-.px-6 {
-  padding-left: 60px;
-  padding-right: 60px;
+.px-4 {
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .py-\[130px\] {
   padding-top: 130px;
   padding-bottom: 130px;
-}
-
-.px-4 {
-  padding-left: 40px;
-  padding-right: 40px;
 }
 
 .py-4 {
@@ -1527,6 +1530,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-duration: 150ms;
 }
 
+.odd\:bg-blue:nth-child(odd) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(184 208 252 / var(--tw-bg-opacity));
+}
+
+.even\:bg-pink:nth-child(even) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(215 180 243 / var(--tw-bg-opacity));
+}
+
 .hover\:cursor-pointer:hover {
   cursor: pointer;
 }
@@ -1667,14 +1680,14 @@ Ensure the default browser behavior of the `hidden` attribute.
     gap: 100px;
   }
 
-  .md\:py-8 {
-    padding-top: 80px;
-    padding-bottom: 80px;
-  }
-
   .md\:px-6 {
     padding-left: 60px;
     padding-right: 60px;
+  }
+
+  .md\:py-8 {
+    padding-top: 80px;
+    padding-bottom: 80px;
   }
 
   .md\:pt-\[125px\] {
