--- a/css/components/_header.css
+++ b/css/components/_header.css
@@ -13,7 +13,7 @@ body .navigation-primary a,
 .header__language-switcher .lang_list_class li a {
   color: var(--color-black);
   font-size: 12px;
-  font-family: 'montserrat', sans-serif;
+  font-family: var(--font-family);
 }
 
 body .navigation-primary a:hover,
@@ -63,7 +63,7 @@ body .submenu.level-2 > li:first-child.focus:before {
 
 .header__language-switcher-label-current,
 .header__language-switcher .lang_list_class li a {
-  font-family: 'montserrat', sans-serif;
+  font-family: var(--font-family);
 }
 
 .header__language-switcher-label-current:after {
