--- a/css/tw-output.css
+++ b/css/tw-output.css
@@ -42,7 +42,7 @@ html {
   -o-tab-size: 4;
      tab-size: 4;
   /* 3 */
-  font-family: montserrat, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Poppins, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* 4 */
 }
 
@@ -545,6 +545,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   top: -75px;
 }
 
+.left-\[-65px\] {
+  left: -65px;
+}
+
 .bottom-\[-85px\] {
   bottom: -85px;
 }
@@ -673,10 +677,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 70px;
 }
 
-.mb-6 {
-  margin-bottom: 60px;
-}
-
 .block {
   display: block;
 }
@@ -739,6 +739,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 25px;
 }
 
+.h-\[300px\] {
+  height: 300px;
+}
+
 .h-auto {
   height: auto;
 }
@@ -751,10 +755,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 1px;
 }
 
-.h-\[300px\] {
-  height: 300px;
-}
-
 .max-h-\[250px\] {
   max-height: 250px;
 }
@@ -765,6 +765,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .max-h-full {
   max-height: 100%;
+}
+
+.max-h-\[350px\] {
+  max-height: 350px;
 }
 
 .max-h-\[70\%\] {
@@ -829,12 +833,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 25px;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
-}
-
 .w-\[300px\] {
   width: 300px;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
 }
 
 .min-w-full {
@@ -863,10 +867,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .max-w-\[1200px\] {
   max-width: 1200px;
-}
-
-.max-w-\[300px\] {
-  max-width: 300px;
 }
 
 .max-w-\[150px\] {
@@ -1371,7 +1371,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 .font-sans {
-  font-family: montserrat, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Poppins, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .text-2xs {
@@ -1528,16 +1528,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
-}
-
-.odd\:bg-blue:nth-child(odd) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(184 208 252 / var(--tw-bg-opacity));
-}
-
-.even\:bg-pink:nth-child(even) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(215 180 243 / var(--tw-bg-opacity));
 }
 
 .hover\:cursor-pointer:hover {
