--- a/css/utilities/_typography.css
+++ b/css/utilities/_typography.css
@@ -23,7 +23,7 @@ h1,
   font-size: 56px;
   line-height: 1.142;
   letter-spacing: -0.28px;
-  font-family: 'montserrat';
+  font-family: var(--font-family);
   font-weight: var(--font-weight-medium);
 }
 
@@ -31,7 +31,7 @@ h2,
 .h2 {
   font-size: 48px;
   line-height: 1.2;
-  font-family: 'montserrat';
+  font-family: var(--font-family);
   font-weight: var(--font-weight-regular);
 }
 
@@ -40,7 +40,7 @@ h3,
   font-size: 40px;
   line-height: 1.2;
   letter-spacing: -0.4px;
-  font-family: 'montserrat';
+  font-family: var(--font-family);
   font-weight: var(--font-weight-medium);
 }
 
@@ -48,7 +48,7 @@ h4,
 .h4 {
   font-size: 32px;
   line-height: 1.25;
-  font-family: 'montserrat';
+  font-family: var(--font-family);
   font-weight: var(--font-weight-light);
 }
 
@@ -57,7 +57,7 @@ h5,
   font-size: 24px;
   line-height: 1.333;
   letter-spacing: 0.12px;
-  font-family: 'montserrat';
+  font-family: var(--font-family);
   font-weight: var(--font-weight-medium);
 }
 
@@ -65,7 +65,7 @@ h6,
 .h6 {
   font-size: 20px;
   line-height: 1.4;
-  font-family: 'montserrat';
+  font-family: var(--font-family);
   font-weight: var(--font-weight-medium);
 }
 
@@ -73,7 +73,7 @@ h6,
   font-size: 52px;
   line-height: 1.27;
   letter-spacing: -0.26px;
-  font-family: var(--font-family-ex);
+  font-family: var(--font-family);
 }
 
 blockquote {
@@ -94,14 +94,14 @@ blockquote {
   line-height: 1.285;
   text-transform: uppercase;
   letter-spacing: 0.56px;
-  font-family: var(--font-family-cd);
+  font-family: var(--font-family);
   font-weight: var(--font-weight-medium);
 }
 
 .subtitle-3 {
   font-size: 24px;
   line-height: 1.2;
-  font-family: var(--font-family-ex);
+  font-family: var(--font-family);
   font-weight: 600;
   text-transform: uppercase;
 }
@@ -110,26 +110,26 @@ blockquote {
   font-size: 18px;
   line-height: 1.555;
   letter-spacing: 0.18px;
-  font-family: 'montserrat';
+  font-family: var(--font-family);
   font-weight: var(--font-weight-regular);
 }
 
 .paragraph-2 {
   font-size: 16px;
   line-height: 1.5;
-  font-family: 'montserrat';
+  font-family: var(--font-family);
   font-weight: var(--font-weight-light);
 }
 
 .paragraph-small {
   font-size: 14px;
   line-height: 1.285;
-  font-family: 'montserrat';
+font-family: var(--font-family);
   font-weight: var(--font-weight-regular);
 }
 
 .link-with-arrow {
-  font-family: 'montserrat';
+  font-family: var(--font-family);
   font-weight: 500;
   font-size: 18px;
   line-height: 1.22;
