--- a/css/utilities/_variables.css
+++ b/css/utilities/_variables.css
@@ -48,7 +48,7 @@
   --footer-text-color: var(--color-white);
 
   /* Fonts */
-
+  --font-family: Poppins, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-size-h1: 56px;
 
   --font-weight-light: 300;
