--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -17,13 +17,13 @@
 
       {% module 'Footer subtitle'
         path='@hubspot/rich_text',
-        html={{ context.content || '<p class="h6 my-2 footer-description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna Lorem ipsum dolor sit.</p>' }}
+        html={{ context.content || '<p class="mt-5 text-lg lg:text-3xl footer-description">Kvalitet bez kompromisa.</p>' }}
         label='Subtitle'
       %}
 
     </div>
 
-    <div class="footer-social-icons">
+    <!-- <div class="footer-social-icons">
       {% module 'Social Icon 1'
         path='@hubspot/image',
         img={
@@ -38,7 +38,7 @@
         }
         label="Social Icon 2"
       %}
-    </div>
+    </div> -->
 
     <div class="footer-spacer"></div>
 
