--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -24,14 +24,19 @@
 </head>
 
 <body>
-  <!-- <div class="splash-screen fixed w-screen h-screen z-40 bg-center bg-no-repeat bg-cover top-0 left-0 
-  bg-[url('https://26015966.fs1.hubspotusercontent-eu1.net/hubfs/26015966/Splash.jpg')]
-  flex items-center justify-center">
-    <div class="flex flex-col items-center w-1/3">
+  <div class="splash-screen fixed hidden w-screen h-screen z-[99999] top-0 left-0 items-center justify-center">
+    <!-- The video -->
+    <video autoplay muted loop class="top-0 left-0 w-full h-full absolute object-cover">
+      <source src="https://26015966.fs1.hubspotusercontent-eu1.net/hubfs/26015966/Video_TRIDENT_52ec2c7ebf.mp4"
+        type="video/mp4">
+    </video>
+    <!-- Optional: some overlay text to describe the video -->
+    <div class="z-10 flex flex-col items-center w-1/3 ">
       <img src="https://26015966.fs1.hubspotusercontent-eu1.net/hubfs/26015966/splash-logo.png">
-      <div class="loading-bar w-full h-[1px] bg-white mt-5"></div>
+      <div class="loading-bar w-[1px] animate-fill h-[1px] bg-white mt-5"></div>
     </div>
-  </div> -->
+  </div>
+
   <div class="body-wrapper {{ builtin_body_classes }}">
     {% block header %}
     {% global_partial path='../partials/header.html' %}
