--- a/templates/test.html
+++ b/templates/test.html
@@ -16,7 +16,10 @@ editors the ability to adjust the content and alignment of the text. #}
 label='Main section',
 class='body-container body-container--home'
 %}
-<p class="text-4xl my-5"></p>
+<p class="text-4xl my-5 text-1xl mb-1 lg:text-2xl"></p>
+
+<p class="text-lg lg:text-2xl"></p>
+<p class="lg:text-5xl"></p>
 
 {% include_dnd_partial
 path='../sections/hero.html',
