--- a/css/tw-output.css
+++ b/css/tw-output.css
@@ -603,19 +603,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 0px;
 }
 
-.my-1 {
-  margin-top: 10px;
-  margin-bottom: 10px;
+.my-2 {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .my-5 {
   margin-top: 50px;
   margin-bottom: 50px;
-}
-
-.my-2 {
-  margin-top: 20px;
-  margin-bottom: 20px;
 }
 
 .mt-8 {
@@ -684,6 +679,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mb-4 {
   margin-bottom: 40px;
+}
+
+.mb-1 {
+  margin-bottom: 10px;
 }
 
 .block {
@@ -1475,12 +1474,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-weight: 500;
 }
 
+.font-semibold {
+  font-weight: 600;
+}
+
 .uppercase {
   text-transform: uppercase;
 }
 
 .italic {
   font-style: italic;
+}
+
+.leading-normal {
+  line-height: 1.5;
 }
 
 .leading-tight {
@@ -1501,10 +1508,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .\!leading-snug {
   line-height: 1.375 !important;
-}
-
-.leading-normal {
-  line-height: 1.5;
 }
 
 .tracking-tight {
@@ -1874,6 +1877,16 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:text-5xl {
     font-size: 48px;
+    line-height: 1;
+  }
+
+  .lg\:text-2xl {
+    font-size: 28px;
+    line-height: 2rem;
+  }
+
+  .lg\:text-6xl {
+    font-size: 52px;
     line-height: 1;
   }
 
