--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -5,8 +5,8 @@
 <html lang="{{ html_lang }}" {{ html_lang_dir }}>
 
 <head>
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" media="all" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <meta charset="utf-8">
   {% if page_meta.html_title || pageTitle %}<title>{{ page_meta.html_title || pageTitle }}</title>{% endif %}
   {% if site_settings.favicon_src %}
@@ -26,17 +26,19 @@
 <body>
   <div class="splash-screen fixed hidden w-screen h-screen z-[99999] top-0 left-0 items-center justify-center">
     <!-- The video -->
-    <video autoplay muted loop class="top-0 left-0 w-full h-full absolute object-cover">
+    <video playsinline autoplay loop muted id="my-video"
+      class="hidden lg:block top-0 left-0 w-full h-full absolute object-cover">
       <source src="https://26015966.fs1.hubspotusercontent-eu1.net/hubfs/26015966/Video_TRIDENT_52ec2c7ebf.mp4"
         type="video/mp4">
     </video>
+    <img src="https://26015966.fs1.hubspotusercontent-eu1.net/hubfs/26015966/Galerija%20Bazeni/img.12.jpg"
+      class="block lg:hidden top-0 left-0 w-full h-full absolute object-cover" />
     <!-- Optional: some overlay text to describe the video -->
     <div class="z-10 flex flex-col items-center w-1/3 ">
       <img src="https://26015966.fs1.hubspotusercontent-eu1.net/hubfs/26015966/splash-logo.png">
       <div class="loading-bar w-[1px] animate-fill h-[1px] bg-white mt-5"></div>
     </div>
   </div>
-
   <div class="body-wrapper {{ builtin_body_classes }}">
     {% block header %}
     {% global_partial path='../partials/header.html' %}
