--- a/templates/pools.html
+++ b/templates/pools.html
@@ -18,27 +18,72 @@
 	  {% include_dnd_partial
 	    path='../sections/header-1.html',
 	    context={
-	      'title': '<h1 class="font-normal mb-2 text-6xl">Pools</h1>'
+	      'title': '<h1 class="font-normal mb-2 text-6xl">Bazeni</h1>',
+				'subtitle': '<p class="font-light text-lg md:text-3xl">A&T SISTEM je firma kojoj sa punim poverenjem možete poveriti kompletne radove oko izgradnje komercijalnih i rezidencijalnih betonskih bazena, od izrade idejnog rešenja do puštanja bazenskog sistema u rad.</p>'
 	    }
 	  %}
 
 	  {% include_dnd_partial
-	    path='../sections/categories.html',
+	    path='../sections/featured-services.html',
 	  %}
 
-
-	  {% include_dnd_partial
-	    path='../sections/banner-small.html',
-	  %}
-	  
-	  {% include_dnd_partial
-	    path='../sections/cards-grid.html',
-	  %}
-	  
+		{% dnd_section 
+			padding={
+				'default':{
+					'top': 80,
+					'bottom':80,
+					'left':40,
+					'right':40
+				},
+				'mobile':{
+					'top': 40,
+					'bottom':40,
+					'left':40,
+					'right':40
+				}
+			}
+		%}
+			{% dnd_column offset=0, width=12 %}
+				{% dnd_row %}
+					{% dnd_module 
+						path="@hubspot/rich_text",
+						html='<h2 class="font-light text-2xl leading-tight mb-2 sm:text-7xl sm:leading-1">Vrhunska oprema za <span class="font-bold">bazene</span></h2>'
+					%}
+				{% end_dnd_module %}
+				{% end_dnd_row %}
+				{% dnd_row %}
+					{% dnd_module 
+						path="../modules/image-with-post-reversible",
+					%}
+				{% end_dnd_module %}
+				{% end_dnd_row %}
+			{% end_dnd_column %}
+		{% end_dnd_section %}
 
 		{% include_dnd_partial
 	    path='../sections/video-player.html',
+	  %}
+	  
+	  {% include_dnd_partial
+	    path='../sections/image-cards.html',
+	  %}
+
+		{% include_dnd_partial
+	    path='../sections/image-with-text.html',
 	  %}  
+
+
+		{% include_dnd_partial
+	    path='../sections/cards-grid.html',
+	  %}
+
+		{% include_dnd_partial
+	    path='../sections/image-gallery.html',
+	  %}
+
+		{% include_dnd_partial
+	    path='../sections/video-player.html',
+	  %}
 
 	{% end_dnd_area %}
 {% endblock body %}
