--- a/templates/wellness.html
+++ b/templates/wellness.html
@@ -18,7 +18,8 @@
 	  {% include_dnd_partial
 	    path='../sections/header-1.html',
 	    context={
-	      'title': '<h1 class="font-normal mb-2 text-6xl">Wellness</h1>'
+	      'title': '<h1 class="font-normal mb-2 text-6xl">Wellness</h1>',
+				'subtitle': '<p class="font-light text-lg md:text-3xl">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>'
 	    }
 	  %}
 
@@ -36,8 +37,6 @@
 		{% include_dnd_partial
 			path='../sections/image-with-text.html'
 		%}
-
-		{# TODO another section #}
 
 		{% include_dnd_partial
 			path='../sections/featured-services.html'
