Add excellence seal, edit image card module to hide button if link is empty

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -21,6 +21,10 @@
         label='Subtitle'
       %}
 
+      <div class="w-full mt-4">
+        <img src="{{get_asset_url('../../images/logos/seal_qr.jpg')}}" class="w-full" />
+      </div>
+
     </div>
 
     <!-- <div class="footer-social-icons">
