--- a/templates/test.html
+++ b/templates/test.html
@@ -20,6 +20,7 @@ class='body-container body-container--home'
 
 <p class="text-lg lg:text-2xl"></p>
 <p class="lg:text-5xl"></p>
+<div class="xl:grid-cols-3 2xl:grid-cols-4"></div>
 
 {% include_dnd_partial
 path='../sections/hero.html',
