--- a/css/tw-output.css
+++ b/css/tw-output.css
@@ -827,6 +827,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   min-height: 450px;
 }
 
+.min-h-max {
+  min-height: -moz-max-content;
+  min-height: max-content;
+}
+
+.min-h-\[75px\] {
+  min-height: 75px;
+}
+
 .w-full {
   width: 100%;
 }
@@ -992,10 +1001,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -1219,16 +1224,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
+.bg-textBaseGradient {
+  background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.4) 69.25%);
+}
+
 .bg-purpleGradient {
   background-image: linear-gradient(47.66deg, #A5C3FA -5.18%, #D1A1F7 102.55%);
 }
 
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
-}
-
-.bg-textBaseGradient {
-  background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.4) 69.25%);
 }
 
 .from-transparent {
@@ -1483,6 +1488,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.333;
 }
 
+.text-4xl {
+  font-size: 40px;
+  line-height: 2.5rem;
+}
+
 .text-3xl {
   font-size: 32px;
   line-height: 2.25rem;
@@ -1491,11 +1501,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-6xl {
   font-size: 52px;
   line-height: 1;
-}
-
-.text-4xl {
-  font-size: 40px;
-  line-height: 2.5rem;
 }
 
 .font-light {
@@ -1548,6 +1553,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .\!leading-snug {
   line-height: 1.375 !important;
+}
+
+.leading-10 {
+  line-height: 2.5rem;
 }
 
 .tracking-tight {
