--- a/modules/swiper-gallery.module/module.css
+++ b/modules/swiper-gallery.module/module.css
@@ -1,11 +1,20 @@
-.sponsorship-images-pagination-container .swiper-pagination-bullet {
-  width: 50px;
-  height: 4px;
-  margin-right: 20px;
-  background-color: #EBEBEB;
-  border-radius: 0;
+.swiper-pagination-bullet {
+  width: 50px !important; 
+  height: 4px !important;
+  margin-right: 20px !important;
+  background-color: #c0c0c0 !important;
+  border-radius: 0 !important;
 }
 
-.sponsorship-images-pagination-container .swiper-pagination-bullet-active {
-  background-color: #B8D0FC;
+.swiper-pagination-bullet-active {
+  background-color: #B8D0FC !important;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: #B8D0FC !important;
+}
+
+.swiper-button-disabled {
+  color: #c0c0c0 !important;
 }
