--- a/css/tw-output.css
+++ b/css/tw-output.css
@@ -468,6 +468,28 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-backdrop-sepia:  ;
 }
 
+button, .button {
+  --tw-bg-opacity: 1;
+  background-color: rgb(215 180 243 / var(--tw-bg-opacity));
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-family: Poppins, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 14px;
+  line-height: 1rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 0.025em;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+button:hover, button:focus, .button:hover, .button:focus, button:active, .button:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(197 152 234 / var(--tw-bg-opacity));
+}
+
 .visible {
   visibility: visible;
 }
@@ -525,6 +547,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   left: 20px;
 }
 
+.\!-right-\[35px\] {
+  right: -35px !important;
+}
+
+.\!-left-\[35px\] {
+  left: -35px !important;
+}
+
 .top-\[50\%\] {
   top: 50%;
 }
@@ -557,30 +587,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   bottom: -85px;
 }
 
-.top-\[calc\(100\%-23px\)\] {
-  top: calc(100% - 23px);
-}
-
-.\!top-\[calc\(100\%-23px\)\] {
-  top: calc(100% - 23px) !important;
-}
-
-.\!top-\[calc\(100\%-25px\)\] {
-  top: calc(100% - 25px) !important;
-}
-
-.-left-\[35px\] {
-  left: -35px;
-}
-
-.\!-left-\[35px\] {
-  left: -35px !important;
-}
-
-.\!-right-\[35px\] {
-  right: -35px !important;
-}
-
 .z-10 {
   z-index: 10;
 }
@@ -607,10 +613,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .z-40 {
   z-index: 40;
-}
-
-.z-\[99999\] {
-  z-index: 99999;
 }
 
 .col-span-3 {
@@ -778,6 +780,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 100%;
 }
 
+.h-\[100px\] {
+  height: 100px;
+}
+
 .h-\[10px\] {
   height: 10px;
 }
@@ -808,6 +814,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 5px;
 }
 
+.\!h-\[400px\] {
+  height: 400px !important;
+}
+
 .h-\[auto\] {
   height: auto;
 }
@@ -836,30 +846,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 20px;
 }
 
-.h-\[1px\] {
-  height: 1px;
-}
-
-.h-max {
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
-}
-
-.\!h-max {
-  height: -webkit-max-content !important;
-  height: -moz-max-content !important;
-  height: max-content !important;
-}
-
-.h-\[400px\] {
-  height: 400px;
-}
-
-.\!h-\[400px\] {
-  height: 400px !important;
-}
-
 .max-h-\[250px\] {
   max-height: 250px;
 }
@@ -882,10 +868,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .max-h-\[200px\] {
   max-height: 200px;
-}
-
-.max-h-\[150px\] {
-  max-height: 150px;
 }
 
 .min-h-\[250px\] {
@@ -946,16 +928,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 300px;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
-}
-
-.w-\[1px\] {
-  width: 1px;
-}
-
 .min-w-full {
   min-width: 100%;
+}
+
+.min-w-\[260px\] {
+  min-width: 260px;
 }
 
 .max-w-\[250px\] {
@@ -970,16 +948,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   max-width: 100%;
 }
 
+.max-w-xl {
+  max-width: 36rem;
+}
+
 .max-w-\[1030px\] {
   max-width: 1030px;
 }
 
 .max-w-\[1200px\] {
   max-width: 1200px;
-}
-
-.max-w-xl {
-  max-width: 36rem;
 }
 
 .max-w-\[170px\] {
@@ -990,8 +968,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   max-width: 1000px;
 }
 
-.max-w-\[400px\] {
-  max-width: 400px;
+.max-w-\[200px\] {
+  max-width: 200px;
 }
 
 .max-w-\[750px\] {
@@ -1004,14 +982,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .max-w-\[1520px\] {
   max-width: 1520px;
-}
-
-.max-w-\[500px\] {
-  max-width: 500px;
-}
-
-.max-w-\[200px\] {
-  max-width: 200px;
 }
 
 .flex-1 {
@@ -1059,23 +1029,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-@-webkit-keyframes fillLine {
-  100% {
-    width: 100%;
-  }
-}
-
-@keyframes fillLine {
-  100% {
-    width: 100%;
-  }
-}
-
-.animate-fill {
-  -webkit-animation: fillLine 4s forwards;
-          animation: fillLine 4s forwards;
 }
 
 .cursor-pointer {
@@ -1141,6 +1094,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-4 {
+  gap: 40px;
 }
 
 .gap-3 {
@@ -1225,12 +1182,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-width: 2px;
 }
 
-.border-t-\[3px\] {
-  border-top-width: 3px;
-}
-
 .border-l-\[10px\] {
   border-left-width: 10px;
+}
+
+.border-t-\[3px\] {
+  border-top-width: 3px;
 }
 
 .border-b {
@@ -1247,6 +1204,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-color: rgb(215 180 243 / var(--tw-border-opacity));
 }
 
+.border-l-blue {
+  --tw-border-opacity: 1;
+  border-left-color: rgb(184 208 252 / var(--tw-border-opacity));
+}
+
 .border-t-\[\#6E43FF\] {
   --tw-border-opacity: 1;
   border-top-color: rgb(110 67 255 / var(--tw-border-opacity));
@@ -1260,11 +1222,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-b-white {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.border-l-blue {
-  --tw-border-opacity: 1;
-  border-left-color: rgb(184 208 252 / var(--tw-border-opacity));
 }
 
 .bg-white {
@@ -1338,6 +1295,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
+.bg-blueGradient {
+  background-image: linear-gradient(86.35deg,#54eaea 5.2%,#4886ff 93.67%);
 }
 
 .from-transparent {
@@ -1416,6 +1377,19 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .p-0 {
   padding: 0px;
+}
+
+.p-20 {
+  padding: 5rem;
+}
+
+.p-5 {
+  padding: 50px;
+}
+
+.px-5 {
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 .px-2 {
@@ -1574,24 +1548,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-family: Poppins, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-.text-2xs {
-  font-size: 12px;
-  line-height: 1rem;
-}
-
 .text-lg {
   font-size: 20px;
   line-height: 1.4;
 }
 
-.text-xs {
-  font-size: 14px;
-  line-height: 1rem;
-}
-
 .text-base {
   font-size: 18px;
   line-height: 1.555;
+}
+
+.text-2xs {
+  font-size: 12px;
+  line-height: 1rem;
+}
+
+.text-xs {
+  font-size: 14px;
+  line-height: 1rem;
 }
 
 .text-2xl {
@@ -1764,6 +1738,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-duration: 150ms;
 }
 
+.odd\:bg-red-500:nth-child(odd) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.even\:bg-grey:nth-child(even) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 55 56 / var(--tw-bg-opacity));
+}
+
+.even\:bg-lightGrey:nth-child(even) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 247 253 / var(--tw-bg-opacity));
+}
+
 .hover\:cursor-pointer:hover {
   cursor: pointer;
 }
@@ -1922,8 +1911,24 @@ Ensure the default browser behavior of the `hidden` attribute.
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
+  .md\:items-center {
+    align-items: center;
+  }
+
   .md\:gap-10 {
     gap: 100px;
+  }
+
+  .md\:gap-3 {
+    gap: 30px;
+  }
+
+  .md\:gap-5 {
+    gap: 50px;
   }
 
   .md\:px-6 {
@@ -1989,26 +1994,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     right: -65px;
   }
 
-  .lg\:-left-\[35px\] {
-    left: -35px;
-  }
-
-  .lg\:left-0 {
-    left: 0px;
-  }
-
-  .lg\:\!left-0 {
-    left: 0px !important;
-  }
-
-  .lg\:\!right-0 {
-    right: 0px !important;
-  }
-
-  .lg\:\!top-\[calc\(100\%-25px\)\] {
-    top: calc(100% - 25px) !important;
-  }
-
   .lg\:m-0 {
     margin: 0px;
   }
@@ -2025,12 +2010,8 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-left: 50px;
   }
 
-  .lg\:block {
-    display: block;
-  }
-
-  .lg\:hidden {
-    display: none;
+  .lg\:mr-5 {
+    margin-right: 50px;
   }
 
   .lg\:w-4\/5 {
@@ -2062,12 +2043,24 @@ Ensure the default browser behavior of the `hidden` attribute.
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
   .lg\:items-center {
     align-items: center;
   }
 
   .lg\:gap-\[120px\] {
     gap: 120px;
+  }
+
+  .lg\:gap-3 {
+    gap: 30px;
+  }
+
+  .lg\:gap-5 {
+    gap: 50px;
   }
 
   .lg\:rounded-\[6px\] {
@@ -2078,9 +2071,27 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding: 30px;
   }
 
+  .lg\:p-20 {
+    padding: 5rem;
+  }
+
   .lg\:px-10 {
     padding-left: 100px;
     padding-right: 100px;
+  }
+
+  .lg\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  .lg\:text-left {
+    text-align: left;
+  }
+
+  .lg\:text-xl {
+    font-size: 24px;
+    line-height: 1.333;
   }
 
   .lg\:text-4xl {
@@ -2091,11 +2102,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   .lg\:text-7xl {
     font-size: 56px;
     line-height: 1.142;
-  }
-
-  .lg\:text-xl {
-    font-size: 24px;
-    line-height: 1.333;
   }
 
   .lg\:text-\[80px\] {
@@ -2117,8 +2123,23 @@ Ensure the default browser behavior of the `hidden` attribute.
     line-height: 2rem;
   }
 
+  .lg\:text-lg {
+    font-size: 20px;
+    line-height: 1.4;
+  }
+
+  .lg\:text-base {
+    font-size: 18px;
+    line-height: 1.555;
+  }
+
   .lg\:leading-1 {
     line-height: 1.142;
+  }
+
+  .lg\:even\:bg-lightGrey:nth-child(even) {
+    --tw-bg-opacity: 1;
+    background-color: rgb(247 247 253 / var(--tw-bg-opacity));
   }
 }
 
